--- a/src/pages/signin.html
+++ b/src/pages/signin.html
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
 <div id="signinToast" class="fixed flex justify-center top-4 bg-green-500 text-white p-4 rounded-lg shadow-lg hidden">
-  Đăng nhập thành công! Bạn sẽ được chuyển đến trang chat sau 2 giây.
+  Đăng nhập thành công! Đang chuyển đến trang chat.
 </div>
 <div class="w-full max-w-md p-8 space-y-6 bg-white shadow-lg rounded-lg">
   <h2 class="text-3xl font-extrabold text-center text-gray-900 pb-10">Đăng Nhập</h2>
