--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -53,7 +53,9 @@
       </button>
     </div>
   </form>
-
+  <p class="text-center text-sm text-gray-600">Đã có tài khoản?
+    <a id="signin-link" href="#" class="text-indigo-600 hover:text-indigo-500">Đăng nhập</a>
+  </p>
   </div>
 
   <div id="success-modal" class="fixed flex items-center justify-center bg-opacity-50 inset-0 hidden">
