--- a/src/pages/chat.html
+++ b/src/pages/chat.html
@@ -40,7 +40,7 @@
                             </a>
                         </nav>
                         <div class="flex flex-col items-center gap-y-4 py-10">
-                            <button class="group relative rounded-xl p-2 text-gray-400 ">
+                            <button id="logout" class="group relative rounded-xl p-2 text-gray-400 ">
                                 <img src="../assets/icons/ti-logout.svg" alt="" class="h-8 w-8 xs:h-10 xs:w-10">
                             </button>
                         </div>
