--- a/src/pages/signin.html
+++ b/src/pages/signin.html
@@ -6,7 +6,7 @@
   <title>Đăng Nhập</title>
   <link rel="stylesheet" href="../assets/css/output.css">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="../assets/js/main.js" defer type="module"></script>
+  <script src="../assets/js/auth.js" defer type="module"></script>
 
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
