--- a/src/pages/chat.html
+++ b/src/pages/chat.html
@@ -35,10 +35,10 @@
                                 <img src="../assets/icons/ti-group.svg" class="xs:h-10 xs:w-10 h-8 w-8 stroke-current"
                                     alt="">
                             </button>
-                            <a href="#" class="text-gary-400 group relative rounded-xl p-2 ">
-                                <img src="../assets/icons/ti-setting.svg" class="xs:h-10 xs:w-10 h-8 w-8 stroke-current"
+                            <button id="openModalSearchBtn" class="text-gary-400 group relative rounded-xl p-2 ">
+                                <img src="../assets/icons/s-g-w.png" class="xs:h-12 xs:w-12 h-11 w-11 stroke-current"
                                     alt="">
-                            </a>
+                            </button>
                         </nav>
                         <div class="flex flex-col items-center gap-y-4 py-10">
                             <button id="logout" class="group relative rounded-xl p-2 text-gray-400 ">
@@ -79,11 +79,6 @@
                         class="h-full xs:flex xs:flex-col bg-white rounded-[24px] lg:col-span-2 py-[24px] px-[35px] w-full">
                         <div class="flex items-center justify-between border-b border-[#B4ABAB] pb-[20px]">
                             <div id="room-info" class="flex items-center">
-                                <img src="../assets/icons/Ellipse 1.png" class="w-[55px] h-[55px] mr-[24px]" alt="">
-                                <div>
-                                    <h5 class="font-semibold text-textPrimary text-2xl">Anil</h5>
-                                    <p class="font-light text-textPrimary">Online - Last seen, 2.02pm</p>
-                                </div>
                             </div>
                             <div class="flex items-center">
                                 <img onclick="showModalAddMember()" src="../assets/icons/add_member.svg" alt=""
@@ -156,7 +151,7 @@
     </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal create group -->
     <div id="modal" class="fixed inset-0 bg-gray-800 bg-opacity-50  items-center justify-center hidden">
         <div class="bg-white rounded-lg p-6 w-96 relative">
             <button id="closeModalBtn" type="button"
@@ -186,7 +181,7 @@
                 </div>
 
                 <!-- Thêm thuộc tính name cho input -->
-                <label for="input-group-1" class="block mt-4 mb-2 text-sm font-medium text-gray-900 ">Your Group</label>
+                <label for="2" class="block mt-4 mb-2 text-sm font-medium text-gray-900 ">Your Group</label>
                 <div class="relative mb-6">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                         <img src="../assets/icons/ti-group-black.svg" class="w-5 h-5" alt="">
@@ -207,7 +202,8 @@
     </div>
 
     <!-- Modal thêm member -->
-    <div style="display: none;" id="modal-add-member" class="fixed inset-0 bg-gray-800/20 flex items-center justify-center">
+    <div style="display: none;" id="modal-add-member"
+        class="fixed inset-0 bg-gray-800/20 flex items-center justify-center">
         <div class="min-w-[350px] bg-white rounded-md">
             <div class="text-2xl font-semibold text-textPrimary flex items-center justify-between py-2 px-3 border-b">
                 <div>Thêm thành viên</div>
@@ -218,7 +214,8 @@
                 <form id="form__add-member">
                     <div
                         class="w-full rounded-full p-1.5 border border-primary gap-2 flex items-center justify-between">
-                        <input type="text" placeholder="Nhập tên hoặc email" autofocus required class="outline-none flex-1 pl-3">
+                        <input type="text" placeholder="Nhập tên hoặc email" autofocus required
+                            class="outline-none flex-1 pl-3">
                         <button>
                             <img src="../assets/icons/search-alt-svgrepo-com.svg" class="size-10" alt="">
                         </button>
@@ -230,15 +227,71 @@
         </div>
     </div>
 
+    <!-- Modal search group -->
+    <div id="modalSearch" class="fixed inset-0 bg-gray-800 bg-opacity-50  items-center justify-center hidden">
+        <div class="bg-white rounded-lg p-6 w-96 relative">
+            <button id="closeModalSearchBtn" type="button"
+                class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center">
+                <img src="../assets/icons/ti-close.svg" class="w-3 h-3" alt="error img">
+            </button>
+            <h2 class="text-xl mb-4">Join Group</h2>
+            <form action="" id="form__search-group">
+                <div class="relative mb-6 flex">
+                    <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                        <img src="../assets/icons/ti-group-black.svg" class="w-5 h-5" alt="">
+                    </div>
+                    <input type="text" id="input-group-2" name="group-name"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5"
+                        placeholder="Nhập id nhóm" required>
+                    <button type="submit"
+                        class="p-2.5 ms-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300">
+                        <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 20 20">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                        </svg>
+                    </button>
+                </div>
+            </form>
+            <ul id="listSearchGroup" class="">
+                <!-- hiển thị danh sách -->
+            </ul>
+        </div>
+    </div>
+
+    <!-- Modal thông tin group -->
+    <div style="display: none;" id="modal-group-info" class="fixed inset-0 bg-gray-800/20 flex items-center justify-center">
+        <div class="min-w-[360px] bg-white rounded-md">
+            <div class="text-2xl font-semibold text-textPrimary flex items-center justify-between py-2 px-3 border-b">
+                <div>Thông tin nhóm</div>
+                <img onclick="closeModalGroupInfo()" class="size-11 p-2.5 rounded-full hover:bg-gray-300/50"
+                    src="../assets/icons/ti-close.svg" alt="">
+            </div>
+            <div id="room-info__detail" class="py-2">
+                
+            </div>
+        </div>
+    </div>
+
+
+
 
     <script>
         const btnChat = document.querySelector(".btn-chats")
         const listChat = document.querySelector("#list-chats")
         const boxChat = document.querySelector("#box-chat")
+        const dropzone = document.getElementById('dropzone');
+
+
         const openModalBtn = document.getElementById('openModalBtn');
         const modal = document.getElementById('modal');
         const closeModalBtn = document.getElementById('closeModalBtn');
-        const dropzone = document.getElementById('dropzone');
+        const formCreateGroup = document.getElementById('form__create-group');
+
+        const openModalSearchBtn = document.getElementById('openModalSearchBtn');
+        const modalSearch = document.getElementById('modalSearch');
+        const closeModalSearchBtn = document.getElementById('closeModalSearchBtn');
+
 
         btnChat.addEventListener("click", (e) => {
             e.preventDefault();
@@ -256,10 +309,33 @@
 
         modal.addEventListener('click', (event) => {
             if (event.target === modal) {
-                modal.style.display = 'none'; // Ẩn modal
+                modal.style.display = 'none';
             }
         });
 
+        formCreateGroup.addEventListener('submit', (e) => {
+            modal.style.display = 'none';
+        })
+
+        // modal search
+        openModalSearchBtn.addEventListener('click', () => {
+            modalSearch.style.display = 'flex'; // Hiển thị modal
+        });
+
+        closeModalSearchBtn.addEventListener('click', () => {
+            modalSearch.style.display = 'none'; // Ẩn modal
+        });
+
+        modalSearch.addEventListener('click', (event) => {
+            if (event.target === modalSearch) {
+                modalSearch.style.display = 'none';
+            }
+        });
+
+
+
+
+        // drop img
         dropzone.addEventListener('dragover', e => {
             e.preventDefault();
             dropzone.classList.add('border-indigo-600');
@@ -300,6 +376,13 @@
 
         const closeModalAddMember = () => {
             document.getElementById('modal-add-member').style.display = 'none'
+        }
+
+        const showModalGroupInfo = () => {
+            document.getElementById('modal-group-info').style.display = 'flex'
+        }
+        const closeModalGroupInfo = () => {
+            document.getElementById('modal-group-info').style.display = 'none'
         }
 
     </script>
